TAB-7730: Java 11
svn path=/projects/container-test-framework/trunk/; revision=53051